<resources>
    <string name="app_name" translatable="false">Wake mUp</string>

    <string name="google_api_key" translatable="false">AIzaSyAg7YHx_q2HIrbbNcEaFAcH0MTufqSDOtQ</string>
    <string name="description" translatable="false">image description</string>

    <!-- generic text -->
    <string name="no_result_suggestion">No result</string>
    <string name="error_load_suggestion">Fail to load suggestions</string>
    <string name="unknown_place">Unknown</string>
    <string name="text_radius">Radius (%1$s)</string>
    <string name="hint_autocomplete">Search destination</string>
    <string name="how_travel">How do you travel?</string>
    <string name="ringtone">Ringtone</string>

    <!-- Alert text -->
    <string name="snackbar_ask_permission">I needed location permission for determinate your position.</string>
    <string name="snackbar_permission_denied">Go to app settings and enable permission.</string>
    <string name="snackbar_no_location">Destination empty or wrong.</string>
    <string name="snackbar_service_start">Alarm added.\nApplication will be closed automatically.</string>
    <string name="snackbar_no_volume">Ringtone volume low</string>
    <string name="dialog_title_another_service">Another alarm clock is already active</string>
    <string name="dialog_message_another_service">Do you want delete the active alarm and set the new?</string>
    <string name="dialog_message_network_problem">It is not possible to recover the information, try again</string>

    <!-- Action text (menu,button,...) -->
    <string name="action_Ok" translatable="false">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_menu_map_style">Map style</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_about" translatable="false">About</string>
    <string name="action_map_standard" translatable="false">Standard</string>
    <string name="action_map_standard_dark">Standard dark</string>
    <string name="action_map_satellite" translatable="false">Satellite</string>

    <!-- Tutorial text-->
    <string name="target_map">Press and hold to position a marker</string>
    <string name="target_edit">or type the destination</string>
    <string name="target_button">Choose the transport type</string>
    <string name="target_seekbar">Set action radius</string>
    <string name="target_fab">Finally start the service</string>

    <!-- Shared preferences -->
    <string name="key_distance" translatable="false">distance</string>
    <string name="key_theme" translatable="false">theme</string>
    <string name="key_nav_bar_color" translatable="false">nav_bar_color</string>
    <string name="key_primary_color" translatable="false">primary_color</string>
    <string name="key_accent_color" translatable="false">accent_color</string>
    <string-array name="distance_unit">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="distance_value" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="category_unit">System Unit</string>
    <string name="category_customization">Customization</string>
    <string name="distance_title">Distance</string>
    <string name="distance_default_value" translatable="false">km</string>
    <string name="switch_theme_title">Switch theme</string>
    <string name="nav_bar_title">Navigation bar color</string>
    <string name="primary_color_title" translatable="false">Primary color</string>
    <string name="primary_color_summary">Ex. Toolbar</string>
    <string name="accent_color_title" translatable="false">Accent color</string>
    <string name="accent_color_summary">Ex. Button</string>

    <!-- notification -->
    <string name="notification_title">Hey! Wake Up</string>
    <string name="notification_desc">You arrived to destination</string>

    <!-- About Activity -->
    <string name="app_version">Version: %1$s</string>
    <string name="contact_support">Contact Support</string>
    <string name="rate">Rate Application</string>
    <string name="share">Share Application</string>
    <string name="tnx">Thanks for icon</string>
    <string name="davide_name" translatable="false">Davide Ghirelli</string>

</resources>