<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_16dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/elevation_2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/margin_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_16dp"
                android:drawableStart="@mipmap/ic_launcher"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/text_size_20sp" />

            <TextView
                android:id="@+id/app_version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="@color/color_secondary_text" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/contact_support_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/elevation_2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/margin_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_16dp"
            android:drawableStart="@drawable/ic_email"
            android:gravity="center"
            android:text="@string/contact_support"
            android:textColor="@color/color_primary_text"
            android:textSize="@dimen/text_size_16sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/elevation_2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/margin_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_16dp"
                android:drawableStart="@drawable/ic_star"
                android:gravity="center_vertical"
                android:text="@string/rate"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/share_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:drawablePadding="@dimen/margin_16dp"
                android:drawableStart="@drawable/ic_share"
                android:gravity="center_vertical"
                android:text="@string/share"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>